svc.yml
apiVersion: v1
kind: Service
metadata:
  name: sampleimage-service
spec:
  ports: 
    - targetPort: 5000
      port: 80
  type: ClusterIP
  selector:
      app: sampleimage
