nginxingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agictest-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path:
        pathType: Prefix
        backend:
          service:
            name: agictest-service
            port: 
              number: 80
        path: /dev(/|$)(.*)
